# rannum

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README.pt_BR.md  com.github.zelikos.rannum.yml  com.gitlab.zelikos.rollit.json  gitlab-ci.yml  meson.build  rollit.doap
.github/workflows/: ci.yml  main.yml
build-aux/: com.gitlab.zelikos.rollit.Devel.json
build-aux/flatpak/: com.gitlab.zelikos.rollit.Devel.json  dev.zelikos.rollit.Devel.json  dev.zelikos.rollit.json
data/: com.github.zelikos.rannum.appdata.xml  com.github.zelikos.rannum.appdata.xml.in  com.github.zelikos.rannum.desktop  com.github.zelikos.rannum.desktop.in  com.github.zelikos.rannum.gresource.xml  com.github.zelikos.rannum.gschema.xml  com.gitlab.zelikos.rollit.appdata.xml.in  com.gitlab.zelikos.rollit.appdata.xml.in.in  com.gitlab.zelikos.rollit.desktop.in  com.gitlab.zelikos.rollit.gresource.xml  com.gitlab.zelikos.rollit.gschema.xml  com.gitlab.zelikos.rollit.gschema.xml.in  dev.zelikos.rollit.appdata.xml.in.in  dev.zelikos.rollit.desktop.in.in  dev.zelikos.rollit.gschema.xml  dev.zelikos.rollit.gschema.xml.in  dev.zelikos.rollit.metainfo.xml.in.in  gresource.xml  gschema.xml  meson.build  rollit.gresource.xml  rollit.gresource.xml.in  style.css
data/gtk/: about.blp  about.ui  dice-settings.blp  dice-settings.ui  help-overlay.ui  history-item.ui  history-pane.blp  history-pane.ui  history-row.blp  history-row.ui  main-view.blp  main-view.ui  window.blp  window.ui
data/icons/: meson.build
data/styles/: global.css
data/ui/: dice-chooser.blp  help-overlay.blp  history-pane.blp  main-view.blp  window.blp
data/ui/dialogs/: dice-chooser.blp  help-overlay.blp
data/ui/widgets/: history-pane.blp  main-view.blp  tray-row.blp
debian/: changelog  control  copyright
hooks/: pre-commit.hook
meson/: post_install.py
po/: POTFILES  POTFILES.in  com.github.zelikos.rannum.pot  de.po  es.po  fr.po  meson.build  pt_BR.po
po/extra/: POTFILES  extra.pot  fr.po
src/: Application.vala  Main.vala  MainWindow.vala  Window.vala  application.rs  application.vala  config.rs.in  i18n.rs  main.rs  main.vala  meson.build  rollit.gresource.xml  utils.rs  window.rs  window.ui  window.vala
src/Widgets/: HeaderBar.vala  Menu.vala  NumDisplay.vala  NumGen.vala  RollHistory.vala  Window.vala  history_item.vala
src/Widgets/Buttons/: MenuItem.vala  PreviousRoll.vala
src/dialogs/: dice_chooser.rs  dice_settings.rs  mod.rs  tray_row.rs
src/models/: history_item.rs  mod.rs  tray_item.rs
src/widgets/: history_item.rs  history_item.vala  history_pane.rs  history_pane.vala  history_row.rs  main_view.rs  main_view.vala  mod.rs  tray_row.rs
