[package]
name = "rollit"
version = "4.0.1"
edition = "2021"

[profile.release]
lto = true

[dependencies]
once_cell = "1.18.0"
libadwaita-sys = "0.7.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
# random-number = "0.1.8"
fastrand = "2.0.1"
regex = "1.10.2"

[dependencies.gtk]
package = "gtk4"
version = "0.9.0"
features = ["gnome_47"]

[dependencies.gio]
package = "gio"
version = "0.20.0"
features = ["v2_82"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.0"
features = ["v1_6"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
