[package]
name = "rollit"
version = "4.0.2"
edition = "2021"

[profile.release]
lto = true

[dependencies]
once_cell = "1.21.1"
libadwaita-sys = "0.7.2"
log = "0.4.26"
pretty_env_logger = "0.5.0"
# random-number = "0.1.8"
fastrand = "2.3.0"
regex = "1.11.1"

[dependencies.gtk]
package = "gtk4"
version = "0.9.6"
features = ["v4_18"]

[dependencies.gio]
package = "gio"
version = "0.20.9"
features = ["v2_84"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
features = ["v1_7"]

[dependencies.gettext-rs]
version = "0.7.2"
features = ["gettext-system"]
