scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / 'com.gitlab.zelikos.rollit.svg',
  install_dir: iv_datadir / 'icons' / scalable_dir
)

install_data(
  scalable_dir / 'com.gitlab.zelikos.rollit.Devel.svg',
  install_dir: iv_datadir / 'icons' / scalable_dir
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / 'com.gitlab.zelikos.rollit-symbolic.svg',
  install_dir: iv_datadir / 'icons' / symbolic_dir
)
